# PFE

./: .gitignore  .travis.yml  Makefile  README.md  modèle poster PFE 2012.ppt  notes.txt  run_build.sh
Dev/: Doxyfile
Dev/Benchmark/COLOR_BILATERAL_FILTER/: Makefile  color_bilateral_filter.cpp  filterbilateral.cpp  resultatFBNaif.txt
Dev/InterfaceQt/: InterfaceQt.pro  controller.cpp  controller.h  controllerthread.h  filterbilateral.cpp  filterbilateral.h  main.cpp  mainwindow.cpp  mainwindow.h  widgetImage.cpp  widgetImage.h  window.cpp  window.h  window.ui
Dev/InterfaceQtFastFB/: controller.cpp  controllerthread.cpp  filterbilateral.cpp  mainwindow.cpp  widgetImage.cpp  widgetImage.h
Dev/Test/CImg/Test_Bilateral/: CMakeLists.txt  Makefile  Test_Bilateral.kdev4  main.cpp
Dev/Test/CImg/Test_Bilateral/.kdev4/: Test_Bilateral.kdev4
Dev/Test/CImg/Test_Bilateral/include/: Start_CImg.h
Dev/Test/CImg/Test_Bilateral/src/: Start_CImg.cpp
Gantt/: Gantt.gan
InterfaceDesign/: interfacedesign.ep
Rapport/Cahier de Spécification/: Maquette_CDS_02.tex  glossaries.tex
Rapport/Manipulation FB/: EPURapport.cls  Modele_Rapport.tex
Rapport/Pyramide FB/: Modele_Rapport.tex  biblio.bib  include.tex
Rapport/Rapport final/: Modele_Rapport.tex  biblio.bib  include.tex
Rapport/Validation FB/: Modele_Rapport.tex  biblio.bib
Rapport/presentation/: presentation.tex
Rapport/presentation finale/: presentationFinale.tex
presentation/: presentation.tex
rapport et specif (Latex)/: EPURapport.cls  Maquette_CDS_02.tex  biblio.bib  include.tex
(+24 files in other folders)
